# zombie-trooper

./: Cargo.toml  README.md
assets/tilemaps/: level1.tiled-session  tilemapset.  tilemapset.tmx
src/: bullet.rs  camera.rs  main.rs  movement.rs  player.rs  zombies.rs
