[package]
name = "zombie-trooper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_ecs_tilemap = "0.11.*"

[workspace] 
resolver = "2" 

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimization for dependencies (incl Bevy), but not our code
[profile.dev.package."*"]
opt-level = 3
